[package]
name = "github-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
mimalloc = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
